--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,12 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      format_sql: true
       ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
   devtools:
     livereload:
       enabled: true
