--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/basic1__dev?serverTimezone=Asia/Seoul
     username: wh
     password: wh1234
+  profiles:
+    active: dev
   jpa:
     show-sql: true
     hibernate:
